use a dropdown instead

--- a/resources/assets/less/bem/form-select.less
+++ b/resources/assets/less/bem/form-select.less
@@ -48,6 +48,11 @@
     pointer-events: none;
   }
 
+  &--simple-form {
+    background-color: @osu-colour-b4;
+    color: @osu-colour-c1;
+  }
+
   &__input {
     .reset-input();
     padding: 5px;
