Use content font for wiki main page blurb

--- a/resources/assets/less/bem/wiki-main-page.less
+++ b/resources/assets/less/bem/wiki-main-page.less
@@ -20,6 +20,7 @@
   background: @osu-colour-b5;
 
   &__blurb {
+    .content-font();
     font-size: 12px;
     text-align: center;
     font-weight: 300;
