Fix class names and ReviewPost structure

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -45,6 +45,8 @@
 @import "bem/beatmap-discussion-new-float";
 @import "bem/beatmap-discussion-nomination";
 @import "bem/beatmap-discussion-post";
+@import "bem/beatmap-discussion-review-post";
+@import "bem/beatmap-discussion-review-post-embed";
 @import "bem/beatmap-discussion-system-post";
 @import "bem/beatmap-discussion-timestamp";
 @import "bem/beatmap-discussion-vote";
