--- a/resources/assets/less/bem/beatmap-discussion-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-post.less
@@ -141,7 +141,8 @@
 
     .@{_top}--reply & {
       // override padding for discussion previews
-      .beatmap-discussion--preview & {
+      .beatmap-discussion--preview &,
+      .beatmap-discussion-review-post-embed & {
         padding: 10px @_content-gutter-base;
       }
 
