Add quick search ui

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -81,6 +81,7 @@
 @import "bem/beatmapset-panel";
 @import "bem/beatmapset-score";
 @import "bem/beatmapset-scoreboard";
+@import "bem/beatmapset-search-card";
 @import "bem/beatmapset-stats";
 @import "bem/beatmapset-status";
 @import "bem/beatmapset-watches";
@@ -281,6 +282,10 @@
 @import "bem/proportional-container";
 @import "bem/qtip";
 @import "bem/quick-info";
+@import "bem/quick-search";
+@import "bem/quick-search-input";
+@import "bem/quick-search-items";
+@import "bem/quick-search-result";
 @import "bem/ranking-page";
 @import "bem/ranking-page-header";
 @import "bem/ranking-page-table";
@@ -296,6 +301,7 @@
 @import "bem/search-highlight";
 @import "bem/search-result";
 @import "bem/search-result-entry";
+@import "bem/search-result-more";
 @import "bem/search-wiki-page";
 @import "bem/show-more-link";
 @import "bem/simple-form";
@@ -361,6 +367,7 @@
 @import "bem/user-profile-header";
 @import "bem/user-quick";
 @import "bem/user-roles";
+@import "bem/user-search-card";
 @import "bem/user-session-list";
 @import "bem/user-session-list-session";
 @import "bem/user-verification";
