--- a/resources/assets/less/bem/supporter-icon.less
+++ b/resources/assets/less/bem/supporter-icon.less
@@ -26,6 +26,12 @@
   border-radius: 10000px;
   font-size: 12px;
   padding: 0 10px;
+  line-height: normal;
+
+  &--quick-search {
+    font-size: 8px; // icon size
+    height: 100%;
+  }
 
   &--user-card {
     height: @user-card-icon-size;
