--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -297,6 +297,15 @@
     background-color: @pink;
   }
 
+  &--quick-search-close {
+    .default-text-shadow();
+    border-radius: 10000px;
+    padding: 10px 30px;
+    font-size: @font-size--title-small-3;
+    line-height: normal;
+    flex: none;
+  }
+
   &--rounded {
     padding: 10px 15px;
     border-radius: 100000px;
