--- a/resources/assets/less/bem/quick-search-items.less
+++ b/resources/assets/less/bem/quick-search-items.less
@@ -16,44 +16,17 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.flag-country {
-  .default-box-shadow();
-  .default-border-radius();
+.quick-search-items {
+  display: flex;
+  flex-direction: column;
+  margin: 9px -1px -1px;
 
-  height: 20px;
-  width: 30px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: inline-block;
-
-  &--full {
-    width: 100%;
-    height: 100%;
-    box-shadow: none;
-    border-radius: 0;
+  &--empty {
+    color: @osu-colour-c2;
+    font-size: @font-size--title-small-3;
   }
 
-  &--inline {
-    width: 100%;
-    height: auto;
-    padding-bottom: 66.67%;
-  }
-
-  &--small-box {
-    width: 19px;
-    height: 13px;
-    border-radius: 0;
-    box-shadow: none;
-    background-color: transparent;
-  }
-
-  &--userinfo-small {
-    margin: 0 0 0 8px;
-    box-shadow: none;
-  }
-
-  &--scoreboard {
-    box-shadow: none;
+  &__item {
+    margin: 1px 0;
   }
 }
