--- a/resources/assets/less/bem/quick-search.less
+++ b/resources/assets/less/bem/quick-search.less
@@ -16,44 +16,13 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.flag-country {
-  .default-box-shadow();
-  .default-border-radius();
-
-  height: 20px;
-  width: 30px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: inline-block;
-
-  &--full {
-    width: 100%;
-    height: 100%;
-    box-shadow: none;
-    border-radius: 0;
-  }
-
-  &--inline {
-    width: 100%;
-    height: auto;
-    padding-bottom: 66.67%;
-  }
-
-  &--small-box {
-    width: 19px;
-    height: 13px;
-    border-radius: 0;
-    box-shadow: none;
-    background-color: transparent;
-  }
-
-  &--userinfo-small {
-    margin: 0 0 0 8px;
-    box-shadow: none;
-  }
-
-  &--scoreboard {
-    box-shadow: none;
-  }
+.quick-search {
+  .page-width-default();
+  background-color: @osu-colour-b5;
+  color: @osu-colour-c1;
+  border-radius: @border-radius-large;
+  overflow: hidden;
+  max-height: calc(100% - 40px);
+  display: flex;
+  flex-direction: column;
 }
