--- a/resources/assets/less/bem/search-result-more.less
+++ b/resources/assets/less/bem/search-result-more.less
@@ -16,44 +16,40 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.flag-country {
-  .default-box-shadow();
-  .default-border-radius();
+.search-result-more {
+  .link-plain();
+  .fade-element(120ms);
+  border-radius: @border-radius-large;
+  background-color: @osu-colour-b4;
+  height: 40px;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  color: @osu-colour-c1;
+  font-size: @font-size--title-small-3;
 
-  height: 20px;
-  width: 30px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: inline-block;
-
-  &--full {
-    width: 100%;
-    height: 100%;
-    box-shadow: none;
-    border-radius: 0;
+  &:hover {
+    background-color: @osu-colour-b2;
+    color: @osu-colour-c1;
   }
 
-  &--inline {
-    width: 100%;
-    height: auto;
-    padding-bottom: 66.67%;
+  &:focus, &:active {
+    color: @osu-colour-c1;
   }
 
-  &--small-box {
-    width: 19px;
-    height: 13px;
-    border-radius: 0;
-    box-shadow: none;
-    background-color: transparent;
+  &__arrow {
+    flex: none;
   }
 
-  &--userinfo-small {
-    margin: 0 0 0 8px;
-    box-shadow: none;
+  &__content {
+    flex: 1;
   }
 
-  &--scoreboard {
-    box-shadow: none;
+  &__count {
+    padding: 2px 10px;
+    font-size: @font-size--normal;
+    background-color: @osu-colour-b3;
+    border-radius: 10000px;
+    margin-left: 20px;
   }
 }
