--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -49,6 +49,7 @@
 @import "bem/beatmap-discussion-review-post-embed";
 @import "bem/beatmap-discussion-system-post";
 @import "bem/beatmap-discussion-timestamp";
+@import "bem/beatmap-discussion-user-card";
 @import "bem/beatmap-discussion-vote";
 @import "bem/beatmap-discussions";
 @import "bem/beatmap-discussions-chart";
