--- a/resources/assets/less/bem/beatmap-discussion.less
+++ b/resources/assets/less/bem/beatmap-discussion.less
@@ -107,6 +107,10 @@
     margin: 5px 0;
   }
 
+  &__review-wrapper {
+    background: @osu-colour-b3;
+  }
+
   &__timestamp {
     flex: none;
 
@@ -128,5 +132,25 @@
     @media @desktop {
       flex-direction: row;
     }
+
+    &--review {
+      flex-direction: row;
+    }
+
+    &--unread {
+      &::before {
+        .full-size();
+        content: ' ';
+        background-color: @blue-darker;
+        width: 5px;
+      }
+    }
+
+    // group colours
+    .osu-group-colours({
+      &--@{group} {
+        border-top: 2px solid @@colour;
+      }
+    });
   }
 }
