Add modal about verification success

--- a/resources/assets/less/bem/user-verification.less
+++ b/resources/assets/less/bem/user-verification.less
@@ -80,5 +80,9 @@
       font-size: @font-size--large;
       margin-bottom: 20px;
     }
+
+    &--success {
+      font-size: @font-size--large-3;
+    }
   }
 }
