--- a/resources/assets/less/bem/modding-profile-vote-card.less
+++ b/resources/assets/less/bem/modding-profile-vote-card.less
@@ -100,45 +100,11 @@
     flex: none;
     width: 2px;
 
-    .@{_top}--ppy & {
-      background-color: @osu-colour-group-ppy;
-    }
-
-    .@{_top}--bot & {
-      background-color: @osu-colour-group-bot;
-    }
-
-    .@{_top}--dev & {
-      background-color: @osu-colour-group-dev;
-    }
-
-    .@{_top}--gmt & {
-      background-color: @osu-colour-group-gmt;
-    }
-
-    .@{_top}--nat & {
-      background-color: @osu-colour-group-nat;
-    }
-
-    .@{_top}--bng & {
-      background-color: @osu-colour-group-bng;
-    }
-
-    .@{_top}--bng_limited & {
-      background-color: @osu-colour-group-bng;
-    }
-
-    .@{_top}--alumni & {
-      background-color: @osu-colour-group-alumni;
-    }
-
-    .@{_top}--support & {
-      background-color: @osu-colour-group-support;
-    }
-
-    .@{_top}--mapper & {
-      background-color: @osu-colour-blue-1;
-    }
+    .osu-group-colours({
+      .@{_top}--@{group} & {
+        background-color: @@colour;
+      }
+    });
   }
 
   &__user-text {
