--- a/resources/assets/less/bem/user-group-badge.less
+++ b/resources/assets/less/bem/user-group-badge.less
@@ -27,87 +27,67 @@
   justify-content: center;
   align-items: center;
 
-  &--alumni {
-    color: @osu-colour-group-alumni;
-    &::before {
-      content: 'OLD';
+  // mapping group to display-name
+  .osu-group-names() {
+    @alumni: {
+      full: 'ALUMNI';
+      short: 'OLD';
+    }
+    @bng: {
+      full: 'BN';
+      short: 'BN';
+    }
+    @bng_limited: {
+      full: 'BN';
+      short: 'BN';
+    }
+    @bot: {
+      full: 'BOT';
+      short: 'BOT';
+    }
+    @dev: {
+      full: 'DEV';
+      short: 'DEV';
+    }
+    @gmt: {
+      full: 'GMT';
+      short: 'GMT';
+    }
+    @mapper: {
+      full: 'MAP';
+      short: 'MAPPER';
+    }
+    @nat: {
+      full: 'NAT';
+      short: 'NAT';
+    }
+    @ppy: {
+      full: 'PPY';
+      short: 'PPY';
+    }
+    @support: {
+      full: 'SPT';
+      short: 'SUPPORT';
+    }
+  }
 
-      @media @desktop {
-        content: 'ALUMNI';
+  .osu-group-colours({
+    &--@{group} {
+      color: @@colour;
+
+      &::before {
+        content: .osu-group-names[@@group][short];
+        @media @desktop {
+          content: .osu-group-names[@@group][full];
+        }
       }
     }
-  }
+  });
 
-  &--bng {
-    color: @osu-colour-group-bng;
-    &::before {
-      content: 'BN';
-    }
-  }
-
-  &--bng_limited {
-    color: @osu-colour-group-bng;
-    &::before {
-      content: 'BN';
-    }
-  }
-
+  // we need to override this, as bot badge colours are inverted
   &--bot {
-    background-color: @osu-colour-group-bot;
     color: .osu-hsla(@osu-colour-b6, 0.75)[@hsla];
-    &::before {
-      content: 'BOT';
-    }
-  }
-
-  &--dev {
-    color: @osu-colour-group-dev;
-    &::before {
-      content: 'DEV';
-    }
-  }
-
-  &--gmt {
-    color: @osu-colour-group-gmt;
-    &::before {
-      content: 'GMT';
-    }
-  }
-
-  &--mapper {
-    color: @osu-colour-blue-1;
-    &::before {
-      content: 'MAP';
-
-      @media @desktop {
-        content: 'MAPPER';
-      }
-    }
-  }
-
-  &--nat {
-    color: @osu-colour-group-nat;
-    &::before {
-      content: 'NAT';
-    }
-  }
-
-  &--ppy {
-    color: @osu-colour-group-ppy;
-    &::before {
-      content: 'PPY';
-    }
-  }
-
-  &--support {
-    color: @osu-colour-group-support;
-    &::before {
-      content: 'SPT';
-
-      @media @desktop {
-        content: 'SUPPORT';
-      }
-    }
+    background-color: @osu-colour-group-bot;
   }
 
   // actual modifiers start here
