add missing 'group'

--- a/resources/assets/less/colors.less
+++ b/resources/assets/less/colors.less
@@ -189,7 +189,7 @@
 //  .user-card--dev {
 //    ... etc
 .osu-group-colours(@rules) {
-  @groups: ppy, bot, dev, gmt, nat, bng, bng_limited, alumni, support;
+  @groups: ppy, bot, dev, gmt, nat, bng, bng_limited, alumni, support, mapper;
   each(@groups, {
     @group: @value;
     @colour: %('osu-colour-group-%s', @value);
