--- a/resources/assets/less/bem/beatmap-discussion-review-post-embed.less
+++ b/resources/assets/less/bem/beatmap-discussion-review-post-embed.less
@@ -34,6 +34,11 @@
     flex: 1;
     margin: 10px 10px 10px 0;
     min-width: 0;
+
+    &--error {
+      margin: 10px;
+      text-align: center;
+    }
   }
 
   &__timestamp {
