No overlapping progress spinner

--- a/resources/assets/less/bem/account-edit-entry.less
+++ b/resources/assets/less/bem/account-edit-entry.less
@@ -105,6 +105,10 @@
     display: flex;
     flex-wrap: wrap;
     margin: -5px -10px;
+
+    &--vertical {
+      flex-direction: column;
+    }
   }
 
   &__checkboxes-label {
