Fix reversed short/full group names

--- a/resources/assets/less/bem/user-group-badge.less
+++ b/resources/assets/less/bem/user-group-badge.less
@@ -54,8 +54,8 @@
       short: 'GMT';
     }
     @mapper: {
-      full: 'MAP';
-      short: 'MAPPER';
+      full: 'MAPPER';
+      short: 'MAP';
     }
     @nat: {
       full: 'NAT';
@@ -66,8 +66,8 @@
       short: 'PPY';
     }
     @support: {
-      full: 'SPT';
-      short: 'SUPPORT';
+      full: 'SUPPORT';
+      short: 'SPT';
     }
   }
 
