Fix inadvertant external class usage

--- a/resources/assets/less/bem/beatmap-discussion.less
+++ b/resources/assets/less/bem/beatmap-discussion.less
@@ -73,6 +73,10 @@
     }
   }
 
+  &__discussion-header {
+    padding: 10px 15px;
+  }
+
   &__expanded {
     display: flex;
     flex-direction: column;
