--- a/resources/assets/less/bem/beatmap-discussion-vote.less
+++ b/resources/assets/less/bem/beatmap-discussion-vote.less
@@ -18,28 +18,13 @@
 
 .beatmap-discussion-vote {
   @top: beatmap-discussion-vote;
-  @_default-color: white;
+  @_default-color: @osu-colour-f1;
   .reset-input();
-  .default-box-shadow();
-  .default-border-radius();
   .fade-element(100ms);
 
-  min-width: 35px;
-  padding: 10px;
-  padding-top: 5px;
-
   display: flex;
-  flex-direction: column;
-  align-items: center;
   margin-right: 10px;
-
   font-size: 12px;
-
-  background-color: @osu-colour-b1;
-
-  &:hover {
-    .thick-box-shadow();
-  }
 
   &--up {
     &, &:hover {
@@ -64,12 +49,12 @@
     cursor: default;
 
     &:hover {
-      .default-box-shadow();
       color: @osu-colour-b1;
     }
   }
 
   &__count {
+    padding-left: 5px;
     color: white;
     .@{top}--inactive & {
       color: @_default-color;
