--- a/resources/assets/less/bem/beatmap-discussion-review-post-embed.less
+++ b/resources/assets/less/bem/beatmap-discussion-review-post-embed.less
@@ -17,17 +17,32 @@
  */
 .beatmap-discussion-review-post-embed {
   @_top: beatmap-discussion-review-post-embed;
+  @beatmap-icon-size: 22px; // font-size from beatmap-icon.less
+  @beatmap-icon-padding: 10px;
+  @beatmap-icon-container-size: @beatmap-icon-size + (@beatmap-icon-padding * 2);
+  @message-type-icon-size: 15px;
+
   display: flex;
   overflow: hidden;
   background-color: @osu-colour-b2;
-  .default-box-shadow();
-  .default-border-radius();
   flex: 1;
   margin: 5px 0;
-  min-height: 40px;
 
-  &__beatmap-icon {
-    padding: 10px;
+  .default-box-shadow();
+  .default-border-radius();
+
+  &__meta {
+    display: flex;
+    width: 100px;
+    height: @beatmap-icon-container-size;
+    align-items: center;
+  }
+
+  &__icon {
+    width: @beatmap-icon-container-size;
+    padding: @beatmap-icon-padding;
+    display: flex;
+    justify-content: center;
   }
 
   &__link-to-parent {
@@ -35,34 +50,30 @@
     align-items: flex-start;
     padding: 10px;
     color: @osu-colour-f1;
+
+    .link-plain();
     .link-hover({
       color: @osu-colour-c1;
     });
-    .link-plain();
   }
 
-  &__message-container {
+  &__body {
     flex: 1;
-    margin: 10px 10px 10px 0;
-    min-width: 0;
-
-    &--error {
-      margin: 10px;
-      text-align: center;
-    }
+    margin: 10px;
+    margin-left: 0;
   }
 
   &__timestamp {
     margin: 5px 0;
-    min-width: 50px;
+
+    .@{_top}--general-all & {
+      margin: 10px 0;
+    }
   }
 
   &__timestamp-text {
     color: @osu-colour-f1;
     font-size: 9px;
-    // To prevent the height being included when calculating vertical center
-    // position of the icons.
-    height: 0;
   }
 
   &__stripe {
