Fix hitboxes of links

--- a/resources/assets/less/bem/beatmap-discussion-review-post-embed.less
+++ b/resources/assets/less/bem/beatmap-discussion-review-post-embed.less
@@ -45,10 +45,11 @@
     justify-content: center;
   }
 
-  &__link-to-parent {
-    display: flex;
-    align-items: flex-start;
+  &__link {
     padding: 10px;
+  }
+
+  &__link-text {
     color: @osu-colour-f1;
 
     .link-plain();
