--- a/resources/assets/less/bem/beatmap-discussion.less
+++ b/resources/assets/less/bem/beatmap-discussion.less
@@ -138,9 +138,10 @@
     }
   }
 
-  &__link-to-parent {
-    padding: 10px;
-    padding-right: 15px;
+  &__link-to-child {
+    margin: 10px;
+    margin-right: 15px;
+
     color: @osu-colour-f1;
     .link-hover({
       color: @osu-colour-c1;
