Fix error message styling regression

--- a/resources/assets/less/bem/beatmap-discussion-review-post-embed.less
+++ b/resources/assets/less/bem/beatmap-discussion-review-post-embed.less
@@ -31,6 +31,12 @@
   .default-box-shadow();
   .default-border-radius();
 
+  &__error {
+    flex: 1;
+    margin: 10px;
+    text-align: center;
+  }
+
   &__meta {
     display: flex;
     width: 100px;
