Rename less file preparing for class rename

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -128,6 +128,7 @@
 @import "bem/countdown-timer";
 @import "bem/counter-box";
 @import "bem/deleted-comments-count";
+@import "bem/dialog-form";
 @import "bem/download-page";
 @import "bem/download-page-header";
 @import "bem/download-page-video";
@@ -230,7 +231,6 @@
 @import "bem/oauth-client";
 @import "bem/oauth-client-details";
 @import "bem/oauth-clients";
-@import "bem/oauth-form";
 @import "bem/oauth-scopes";
 @import "bem/osu-layout";
 @import "bem/osu-md";
