fix pager colour

--- a/resources/assets/less/bem/mp-history-content.less
+++ b/resources/assets/less/bem/mp-history-content.less
@@ -17,22 +17,21 @@
  */
 
 .mp-history-content {
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+  line-height: 1;
+  padding: 10px;
+
+  margin-bottom: 10px;
+  color: @osu-colour-c1;
+
   &__show-more {
     .reset-input();
 
     cursor: pointer;
 
     text-align: center;
-  }
-
-  &__show-more-box {
-    display: flex;
-    justify-content: center;
-    font-size: 12px;
-    line-height: 1;
-    padding: 10px;
-
-    margin-bottom: 10px;
   }
 
   &__spinner {
