--- a/resources/assets/less/bem/dialog-form.less
+++ b/resources/assets/less/bem/dialog-form.less
@@ -16,7 +16,7 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.oauth-form {
+.dialog-form {
   flex: 1 0 auto;
   width: 100%;
 
