Extract spinner styling

--- a/resources/assets/less/bem/beatmapset-activities.less
+++ b/resources/assets/less/bem/beatmapset-activities.less
@@ -48,6 +48,13 @@
         margin-bottom: 10px;
     }
 
+    &__spinner {
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        padding: 20px;
+    }
+
     &__timeline-icon-margin {
         margin: 10px !important;
     }
