Fix display of 'no discussions found' message

--- a/resources/assets/less/bem/modding-profile-list.less
+++ b/resources/assets/less/bem/modding-profile-list.less
@@ -17,6 +17,8 @@
  */
 
 .modding-profile-list {
+  @_top: modding-profile-list;
+
   &--votes {
     display: flex;
     flex-wrap: wrap;
@@ -30,6 +32,11 @@
     color: @osu-colour-f1;
     font-style: italic;
     margin-bottom: 10px;
+
+    .@{_top}--index & {
+      margin-top: 20px;
+      text-align: center;
+    }
   }
 
   &__row {
