--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -73,6 +73,10 @@
     width: 40px;
     margin-right: 10px;
     flex: none;
+
+    .@{_top}--users & {
+      background-image: url('/images/icons/profile.svg');
+    }
   }
 
   &__row {
