--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -225,6 +225,7 @@
 @import "bem/notification-banner";
 @import "bem/notification-banner-v2";
 @import "bem/notification-icon";
+@import "bem/notification-index";
 @import "bem/notification-popup";
 @import "bem/notification-popup-item";
 @import "bem/notification-popup-item-group";
