link to notification history page.
Link to notification history page to view more notifications instead of
loading more stacks.

--- a/resources/assets/less/bem/notification-type-group.less
+++ b/resources/assets/less/bem/notification-type-group.less
@@ -59,4 +59,13 @@
     font-weight: bold;
     text-transform: uppercase;
   }
+
+  &__show-more-link {
+    .center-content();
+    .link-default();
+
+    display: flex;
+    padding: 5px;
+    font-size: 12px;
+  }
 }
