--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -97,6 +97,7 @@
 @z-index--beatmapset-header: 1;
 @z-index--contest-header: 1;
 @z-index--download-header: 1;
+@z-index--header-nav-v4-active: 1;
 @z-index--page-header: 1;
 @z-index--tournament-header: 1;
 @z-index--notification-banner-v2: 1;
