Update news page header

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -51,6 +51,10 @@
     .@{_top}--forums-index & {
       .at2x-simple('/images/headers/forum-index.jpg');
     }
+
+    .@{_top}--news & {
+      .at2x-simple('/images/headers/news.png');
+    }
   }
 
   &__bg-container {
