Add generic header image

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -36,6 +36,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.5;
+    .at2x-simple('/images/headers/generic.jpg');
 
     &::before {
       .full-size();
