Update header of changelog page

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -45,6 +45,10 @@
       background-position: center;
     }
 
+    .@{_top}--changelog & {
+      .at2x-simple('/images/headers/changelog.jpg');
+    }
+
     .@{_top}--forum & {
       .at2x-simple('/images/headers/forum-topic-covers/forum-cover-category-osu.jpg');
     }
@@ -78,6 +82,10 @@
     width: 40px;
     margin-right: 10px;
     flex: none;
+
+    .@{_top}--changelog & {
+      background-image: url('/images/icons/changelog.svg');
+    }
 
     .@{_top}--news & {
       background-image: url('/images/icons/news.svg');
