Update comments page header

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -87,6 +87,10 @@
       background-image: url('/images/icons/changelog.svg');
     }
 
+    .@{_top}--comments & {
+      background-image: url('/images/icons/chat.svg');
+    }
+
     .@{_top}--news & {
       background-image: url('/images/icons/news.svg');
     }
