Update news icon

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -78,6 +78,10 @@
     width: 40px;
     margin-right: 10px;
     flex: none;
+
+    .@{_top}--news & {
+      background-image: url('/images/icons/news.svg');
+    }
   }
 
   &__row {
