--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -105,6 +105,10 @@
     .@{_top}--news & {
       background-image: url('/images/icons/news.svg');
     }
+
+    .@{_top}--users & {
+      background-image: url('/images/icons/profile.svg');
+    }
   }
 
   &__row {
