--- a/resources/assets/less/bem/profile-header.less
+++ b/resources/assets/less/bem/profile-header.less
@@ -28,7 +28,10 @@
       right: 0;
       top: auto;
       bottom: 100%;
-      margin-bottom: 10px;
+      margin-bottom: 54px; // approximately centered to page title area
+      display: flex;
+      justify-content: center;
+      width: @gutter-desktop;
     }
   }
 
