--- a/resources/assets/less/bem/game-mode.less
+++ b/resources/assets/less/bem/game-mode.less
@@ -18,11 +18,13 @@
 
 .game-mode {
   line-height: normal;
+  background-color: @osu-colour-b6;
 
   @media @desktop {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: @gutter-desktop;
+    top: 17px; // kind of centered in the page title area
+    background-color: transparent;
   }
 
   &__items {
@@ -47,7 +49,7 @@
   &__set-default {
     position: absolute;
     bottom: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     right: 0;
   }
 }
