Change landing page news posts to a 1 + 3 post layout

--- a/resources/assets/less/bem/landing-news.less
+++ b/resources/assets/less/bem/landing-news.less
@@ -17,24 +17,22 @@
  */
 
 .landing-news {
-  padding-bottom: 20px;
+  padding: 10px 0;
 
   &__posts {
     display: flex;
     flex-direction: column;
-    margin: -10px 0;
 
     @media @desktop {
       flex-direction: row;
-      margin: -10px;
+      margin: 0 -10px;
     }
-
-    padding: 20px 0;
   }
 
   &__link {
     width: 100%;
     display: flex;
     justify-content: center;
+    padding: 10px;
   }
 }
