Update headers for home pages

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -362,6 +362,7 @@
 @import "bem/user-group-badge";
 @import "bem/user-home";
 @import "bem/user-home-beatmapset";
+@import "bem/user-home-status";
 @import "bem/user-list";
 @import "bem/user-list-popup";
 @import "bem/user-name";
