--- a/resources/assets/less/bem/account-edit.less
+++ b/resources/assets/less/bem/account-edit.less
@@ -61,11 +61,11 @@
   &__section {
     flex: none;
     width: @section-width;
-    padding: 20px;
+    padding: 20px 20px 20px @gutter-v2;
 
     @media @desktop {
       padding-bottom: 0px;
-      padding-left: 40px;
+      padding-left: @gutter-v2-desktop;
     }
   }
 
