--- a/resources/assets/less/bem/beatmapset-watches.less
+++ b/resources/assets/less/bem/beatmapset-watches.less
@@ -17,8 +17,7 @@
  */
 
 .beatmapset-watches {
-  color: white;
-  margin: 20px;
+  color: @osu-colour-c1;
 
   &__table-container {
     overflow-x: auto;
