--- a/resources/assets/less/bem/user-home-status.less
+++ b/resources/assets/less/bem/user-home-status.less
@@ -1,5 +1,3 @@
-<?php
-
 /**
  *    Copyright (c) ppy Pty Ltd <contact@ppy.sh>.
  *
@@ -18,13 +16,38 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-return [
-    'title' => 'Friends',
-    'too_many' => 'Friend limit reached',
+.user-home-status {
+  @_top: user-home-status;
 
-    'buttons' => [
-      'add' => 'add friend',
-      'disabled' => 'followers',
-      'remove' => 'remove friend',
-    ],
-];
+  display: flex;
+  flex-wrap: wrap;
+  color: @osu-colour-c1;
+  margin: -10px;
+
+  &__item {
+    padding: 10px;
+
+    &--chart {
+      height: 70px;
+      width: 100%;
+    }
+  }
+
+  &__label {
+    font-size: @font-size--small;
+    font-weight: 400;
+
+    .@{_top}__status--selected & {
+      font-size: @font-size--small-2;
+    }
+  }
+
+  &__value {
+    color: @osu-colour-l1;
+    font-size: @font-size--title-small-2;
+
+    .@{_top}__status--selected & {
+      font-size: @font-size--title-small-3;
+    }
+  }
+}
