--- a/resources/assets/less/bem/search-result-more.less
+++ b/resources/assets/less/bem/search-result-more.less
@@ -28,7 +28,7 @@
   color: @osu-colour-c1;
   font-size: @font-size--title-small-3;
 
-  &:hover {
+  &:hover, &__active {
     background-color: @osu-colour-b2;
     color: @osu-colour-c1;
   }
