Update header of wiki pages

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -91,6 +91,10 @@
       .at2x-simple('/images/headers/forum-index.jpg');
     }
 
+    .@{_top}--help & {
+      .at2x-simple("/images/headers/wiki.jpg");
+    }
+
     .@{_top}--news & {
       .at2x-simple('/images/headers/news.png');
     }
