--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -143,15 +143,6 @@
     padding-bottom: 10px;
   }
 
-  &--forum-topic-watches-status {
-    .default-gutter-v2();
-    padding-top: 5px;
-    padding-bottom: 5px;
-    background-color: @osu-colour-b4;
-    display: flex;
-    justify-content: flex-end;
-  }
-
   &--full {
     flex: 1 0 auto;
   }
@@ -175,6 +166,15 @@
   &--header-news, &--groups {
     .default-box-shadow();
     background-color: #333;
+  }
+
+  &--info-bar {
+    .default-gutter-v2();
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: @osu-colour-b4;
+    display: flex;
+    justify-content: flex-end;
   }
 
   &--news {
