--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -311,6 +311,11 @@
     border-radius: 100000px;
   }
 
+  &--rounded-thin {
+    padding: 8px 15px;
+    border-radius: 100000px;
+  }
+
   &--search-advanced {
     flex: 1 0 auto;
     text-transform: lowercase;
