--- a/resources/assets/less/bem/header-nav-v4.less
+++ b/resources/assets/less/bem/header-nav-v4.less
@@ -121,4 +121,12 @@
       }
     }
   }
+
+  &__text {
+    @media @desktop {
+      padding-top: @_gutter-y-desktop;
+      padding-bottom: @_gutter-y-desktop;
+    }
+  }
+
 }
