--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -69,6 +69,7 @@
 
     .@{_top}--chat & {
       .at2x-simple('/images/headers/chat.jpg');
+      opacity: 1;
       filter: hue-rotate(115deg); // fix colour
 
       &::before {
