Update header of download page

--- a/resources/assets/less/bem/download-page-header.less
+++ b/resources/assets/less/bem/download-page-header.less
@@ -22,7 +22,7 @@
   align-items: center;
 
   margin: 20px 0;
-  margin-top: 80px;
+  color: @osu-colour-c1;
 
   @media @desktop {
     margin-left: 90px;
