--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -17,6 +17,18 @@
  */
 
 .header-v4 {
+  .compact() {
+    @media @desktop {
+      height: (@nav2-height + 70px);
+    }
+  }
+
+  .large() {
+    @media @desktop {
+      min-height: 450px;
+    }
+  }
+
   @_top: header-v4;
   display: flex;
   flex-direction: column;
@@ -28,21 +40,23 @@
   }
 
   &--chat {
-    @media @desktop {
-      height: (@nav2-height + 70px);
-    }
+    .compact();
+  }
+
+  &--default {
+    .compact();
+  }
+
+  &--download {
+    .large();
   }
 
   &--search {
-    @media @desktop {
-      height: (@nav2-height + 70px);
-    }
+    .compact();
   }
 
   &--supporter {
-    @media @desktop {
-      min-height: 450px;
-    }
+    .large();
   }
 
   &--users {
@@ -87,6 +101,11 @@
       &::before {
         filter: hue-rotate(-115deg); // undo the one in parent
       }
+    }
+
+    .@{_top}--download & {
+      .at2x-simple('/images/headers/download.jpg');
+      opacity: 0.8;
     }
 
     .@{_top}--forum & {
