--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -362,10 +362,10 @@
 @import "bem/user-group-badge";
 @import "bem/user-home";
 @import "bem/user-home-beatmapset";
-@import "bem/user-home-status";
 @import "bem/user-list";
 @import "bem/user-list-popup";
 @import "bem/user-name";
+@import "bem/user-online-status";
 @import "bem/user-profile-header";
 @import "bem/user-quick";
 @import "bem/user-roles";
