Update class names

--- a/resources/assets/less/bem/user-online-status.less
+++ b/resources/assets/less/bem/user-online-status.less
@@ -16,8 +16,8 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.user-home-status {
-  @_top: user-home-status;
+.user-online-status {
+  @_top: user-online-status;
 
   display: flex;
   flex-wrap: wrap;
