White highlight for active subsection

--- a/resources/assets/less/bem/header-nav-v4.less
+++ b/resources/assets/less/bem/header-nav-v4.less
@@ -109,6 +109,12 @@
       }
 
       &--active {
+        color: @osu-colour-c1;
+
+        .link-hover({
+          color: @osu-colour-c1;
+        });
+
         &::before {
           transform: scaleY(1);
         }
