--- a/resources/assets/less/bem/game-mode.less
+++ b/resources/assets/less/bem/game-mode.less
@@ -27,6 +27,12 @@
     background-color: transparent;
   }
 
+  &--beatmapsets {
+    @media @desktop {
+      right: @gutter-v2-desktop;
+    }
+  }
+
   &__items {
     list-style: none;
     display: flex;
