--- a/resources/assets/less/bem/beatmapsets-search.less
+++ b/resources/assets/less/bem/beatmapsets-search.less
@@ -114,9 +114,7 @@
   &__input-container {
     color: @osu-colour-l1;
     font-size: @font-size--large;
-    margin: 0 -10px;
-    margin-top: 100px;
-    margin-bottom: 20px;
+    margin: 20px -10px;
 
     .@{_top}--sticky & {
       font-size: @font-size--normal-2;
