Add semi-transparent placeholder default colour

--- a/resources/assets/less/layout.less
+++ b/resources/assets/less/layout.less
@@ -29,6 +29,11 @@
   background-color: @osu-colour-h2;
 }
 
+::placeholder {
+  color: inherit;
+  opacity: 0.54; // stolen from firefox
+}
+
 :root {
   --font-default: @font-default;
   --font-default-torus: @font-default-torus;
