Syncronize mouse and keyboard nav in quick search

--- a/resources/assets/less/bem/search-result-more.less
+++ b/resources/assets/less/bem/search-result-more.less
@@ -28,7 +28,9 @@
   color: @osu-colour-c1;
   font-size: @font-size--title-small-3;
 
-  &:hover, &__active {
+
+  
+  &--active {
     background-color: @osu-colour-b2;
     color: @osu-colour-c1;
   }
