--- a/resources/assets/less/bem/user-search-card.less
+++ b/resources/assets/less/bem/user-search-card.less
@@ -25,7 +25,7 @@
   height: 40px;
   line-height: normal;
 
-  &:hover, &__active {
+  &:hover, &--active {
     background-color: @osu-colour-b2;
   }
 
