Update header of beatmapset packs

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -93,6 +93,10 @@
       flex: none;
     }
 
+    .@{_top}--beatmappacks & {
+      .at2x-simple('/images/headers/beatmappacks.jpg');
+    }
+
     .@{_top}--changelog & {
       .at2x-simple('/images/headers/changelog.jpg');
     }
@@ -163,6 +167,11 @@
     width: 40px;
     margin-right: 10px;
     flex: none;
+
+    .@{_top}--beatmappacks & {
+      .at2x-simple('/images/headers/beatmappacks-icon.png');
+      background-size: 80%;
+    }
 
     .@{_top}--changelog & {
       background-image: url('/images/icons/changelog.svg');
