Update header of password reset page

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -132,6 +132,11 @@
       .at2x-simple('/images/headers/news.png');
     }
 
+    .@{_top}--password-reset & {
+      .at2x-simple('/images/headers/password-reset.jpg');
+      opacity: 0.7;
+    }
+
     .@{_top}--search & {
       .at2x-simple('/images/headers/search.jpg');
     }
