Update header of live streams page

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -77,6 +77,15 @@
     .default;
   }
 
+  &--description {
+    .default-gutter-v2();
+    background-color: @osu-colour-b4;
+    color: @osu-colour-c1;
+    font-size: @font-size--title-small;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
   &--download {
     .page-width(20px);
     .default;
