--- a/resources/assets/less/bem/livestream-page.less
+++ b/resources/assets/less/bem/livestream-page.less
@@ -17,12 +17,10 @@
  */
 
 .livestream-page {
-  padding: 20px;
-
-  @media @desktop {
-    padding-left: @padding-big;
-    padding-right: @padding-big;
-  }
+  .default-gutter-v2();
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: @osu-colour-b5;
 
   &__header {
     color: @osu-colour-l1;
