--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -93,6 +93,10 @@
       flex: none;
     }
 
+    .@{_top}--artists & {
+      .at2x-simple("/images/headers/featured-artists.jpg");
+    }
+
     .@{_top}--beatmappacks & {
       .at2x-simple('/images/headers/beatmappacks.jpg');
     }
