--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -38,6 +38,14 @@
     .default-box-shadow();
   }
 
+  &--artist {
+    margin-top: 10px;
+  }
+
+  &--artists {
+    margin-bottom: 10px;
+  }
+
   &--has-anchor {
     .fragment-target-fn();
   }
