--- a/resources/assets/less/bem/page-contents.less
+++ b/resources/assets/less/bem/page-contents.less
@@ -39,10 +39,6 @@
 
   &__artist-left {
     flex-basis: 100%;
-
-    @media @desktop {
-      margin-right: 10px;
-    }
   }
 
   &__content {
@@ -75,6 +71,7 @@
     @media @desktop {
       height: 100%;
       margin-top: 0;
+      margin-left: 10px;
     }
   }
 }
