Fix mobile styling of featured artist

--- a/resources/assets/less/bem/artist.less
+++ b/resources/assets/less/bem/artist.less
@@ -114,7 +114,7 @@
     background-position: center;
     display: block;
 
-    margin: -90px auto 10px auto;
+    margin: 10px auto;
 
     @media @desktop {
       margin-top: -160px;
