--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -223,6 +223,10 @@
       @media @desktop {
         display: flex;
       }
+
+      .@{_top}--artist & {
+        display: flex;
+      }
     }
 
     .@{_top}--chat & {
