--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -38,6 +38,75 @@
     .default-box-shadow();
   }
 
+  &--admin {
+    .default();
+    .default-gutter-v2();
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 10px;
+    color: @osu-colour-c1;
+
+    h1, h3, h4 {
+      font-style: normal;
+      color: white;
+    }
+
+    h1 {
+      font-size: 28px;
+    }
+
+    h3 {
+      font-size: 14px;
+    }
+
+    h4 {
+      font-size: 12px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    a {
+      .link-default();
+    }
+
+    pre {
+      background-color: @osu-colour-b6;
+      border: none;
+      color: white;
+    }
+
+    small {
+      color: @osu-colour-f1;
+    }
+
+    // bootstrap override
+    .label-default {
+      color: @osu-colour-f1;
+      background-color: @osu-colour-b6;
+    }
+  }
+
+  &--admin-store {
+    .default();
+    .default-gutter-v2();
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 10px;
+    color: #000;
+
+    a {
+      .link-blue-dark();
+    }
+
+    .panel-title > small {
+      font-size: 12px;
+      color: #000;
+    }
+  }
+
   &--artist {
     @media @desktop {
       margin-top: 10px;
